# Agentic_AI_Security_And_Governance

./: .env.example  .env.example‎  CONTRIBUTING.md  README.md  requirements.txt  run.py
agentsecgov/: .gitignore  README.md  __init__.py  pyproject.toml
agentsecgov/policies/: agentic.rego
agentsecgov/promptfoo/: promptfooconfig.yaml
agentsecgov/src/agentsecgov/: agent.py  approvals.py  audit.py  auth.py  autonomy.py  circuit_breaker.py  context_security.py  goal.py  kill_switch.py  main.py  mcp_review.py  models.py  monitoring.py  multi_agent.py  output_validation.py  pii.py  policy.py  rag_security.py  sandbox.py  security_signals.py  supply_chain.py  tools.py
agentsecgov/src/agentsecgov/policies/: agentic.rego
agentsecgov/src/agentsecgov/templates/: ai_system_card.md  data_classification.md  deployment_readiness_checklist.md  mcp_server_review.md  rag_ingestion_checklist.md  third_party_component_inventory.md
agentsecgov/tests/: test.py  test_agentsecgov.py  test_red_team.py
