[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsecgov"
version = "0.1.0"
description = "Teaching lab for agentic security and governance"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi==0.136.3",
  "uvicorn==0.49.0",
  "pydantic==2.13.4",
  "python-multipart==0.0.32"
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "httpx==0.28.1"
]
langchain = [
  "langchain==1.3.7",
  "langchain-core==1.4.5"
]
observability = [
  "opentelemetry-api==1.42.1",
  "opentelemetry-sdk==1.42.1",
  "opentelemetry-instrumentation-fastapi==0.63b1"
]
pii = [
  "presidio-analyzer==2.2.362",
  "presidio-anonymizer==2.2.362"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
